<resources>
    <string name="app_name">GoSAFE</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="person_name">Person Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="add_to_trusted">Add To Trusted</string>

    <!--  TODO: Google Map Api Key  -->
    <string name="map_key" translatable="false">AIzaSyDvXSYBPeXhdiolPjCrVz8YW2QY-ngBLz4</string>

    <!--    TODO: Below    -->
    <string name="name">Name</string>
    <string name="email_address">Email Address</string>
    <string name="sign_out">Sign out</string>
    <string name="dec">***</string>
    <string name="save">Save</string>
    <string name="profile_image">profile image</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="show_password">Show Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="not_a_member">Not A Member?</string>
    <string name="Already_a_Member">Already A Member?</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="update_account">Update Account</string>
    <string name="share_with_friends">Share With Friends</string>
    <string name="about_us">About us</string>
    <string name="not_verified">Not Verified!.. Click Here To Get Verified</string>
    <string name="verified">Verified!..</string>
    <string name="not_trusted">Not Trusted</string>
    <string name="refresh">Refresh</string>
</resources>
