<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.LoginActivity">

    <RelativeLayout
        android:id="@+id/al_rl2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background2"
        android:elevation="20dp"
        android:layout_centerHorizontal="true"
        android:transitionName="splashLayout"
        tools:ignore="UselessParent">

        <ImageView
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:id="@+id/logo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/logo"
            android:contentDescription="@string/app_name"
            android:transitionName="splashLogo"/>

        <TextView
            android:id="@+id/al_appName"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/app_name"
            android:layout_below="@id/logo"
            android:textSize="30sp"
            android:textStyle="bold"
            android:transitionName="AppName"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/al_rl3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_below="@id/al_rl2">

        <EditText
            android:id="@+id/al_emailText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:inputType="textEmailAddress"
            android:hint="@string/enter_email"
            android:layout_centerHorizontal="true"
            android:transitionName="emailEditText"/>

        <EditText
            android:id="@+id/al_passwordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:layout_below="@id/al_emailText"
            android:layout_centerHorizontal="true"
            android:transitionName="passwordEditText"/>

        <Button
            android:id="@+id/al_loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/login"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/al_passwordText"
            android:transitionName="signButton"/>

        <CheckBox
            android:id="@+id/al_showCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/al_passwordText"
            android:layout_alignParentStart="true"
            android:padding="10dp"
            android:text="@string/show_password"
            android:textSize="15sp"
            android:transitionName="passwordCheck" />

    </RelativeLayout>

    <TextView
        android:id="@+id/al_forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/forget_password"
        android:textSize="14sp"
        android:textColor="#000"
        android:layout_below="@id/al_rl3"/>

    <ProgressBar
        android:layout_below="@id/al_forgotPassword"
        android:layout_centerHorizontal="true"
        android:id="@+id/al_progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/al_signUpText"
        android:background="@drawable/layout_ripple">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="5dp"
            android:text="@string/not_a_member"
            android:textSize="15sp"
            android:textColor="#000"
            android:textStyle="italic"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginBottom="5dp"
            android:text="@string/sign_up"
            android:textSize="15sp"
            android:textColor="#FFF44336"
            android:textStyle="bold|italic"/>

    </LinearLayout>

</RelativeLayout>