<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/up_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/actionbarColor"
        android:elevation="10dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="20dp"/>

    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/up_toolbar"
        app:srcCompat="@drawable/account_image"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"/>

    <TextView
        android:id="@+id/profileName"
        android:layout_below="@id/profileImage"
        android:text="@string/app_name"
        android:textColor="#000"
        android:textSize="40sp"
        android:alpha="1.0"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ScrollView
        android:id="@+id/profileButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/profileEnd"
        android:layout_below="@id/profileName"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/profileUpdateAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:padding="20dp"
                android:text="@string/update_account" />

            <Button
                android:id="@+id/profileShare"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:padding="20dp"
                android:text="@string/share_with_friends" />

            <Button
                android:id="@+id/profileAbout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:padding="20dp"
                android:text="@string/about_us" />

            <Button
                android:id="@+id/profileSignOut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:padding="20dp"
                android:text="@string/sign_out" />

        </LinearLayout>

    </ScrollView>

    <TextView
        android:id="@+id/profileEnd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dec"
        android:textColor="#000"
        android:layout_alignParentBottom="true"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize="30sp"/>

    <ProgressBar
        android:id="@+id/profileProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/up_toolbar"
        android:layout_alignBottom="@+id/profileImage"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"/>

</RelativeLayout>