<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cLL_relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:padding="10dp"
    android:elevation="10dp"
    android:background="#F1F1F1">

     <LinearLayout
         android:id="@+id/cLL_LinearLayout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="0.5"
         android:layout_marginEnd="40dp"
         android:orientation="vertical">

          <TextView
              android:id="@+id/cLL_NameTextView"
              android:layout_width="wrap_content"
              android:layout_height="0dp"
              android:layout_weight="0.5"
              android:maxLines="1"
              android:text="@string/person_name"
              android:layout_gravity=""
              android:textColor="#000"
              android:textSize="18sp"
              tools:ignore="NestedWeights" />

          <TextView
              android:id="@+id/cLL_NumberTextView"
              android:layout_width="wrap_content"
              android:layout_height="0dp"
              android:layout_weight="0.5"
              android:maxLines="1"
              android:text="@string/mobile_number"
              android:textColor="#000"
              android:textSize="18sp"/>

     </LinearLayout>

     <Button
         android:id="@+id/cLL_SubmitButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="0.5"
         android:text="@string/add_to_trusted"/>

</LinearLayout>