<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Activities.UpdateProfile">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/up_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/actionbarColor"
        android:elevation="10dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"/>

    <ImageView
        android:id="@+id/up_profileImage"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/up_toolbar"
        app:srcCompat="@drawable/account_image"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/profile_image"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"/>

    <ScrollView
        android:layout_below="@id/up_profileImage"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/up_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:layout_margin="10dp"
                android:autofillHints="@null"/>

            <EditText
                android:id="@+id/up_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:layout_margin="10dp"
                android:autofillHints="@null"/>

            <EditText
                android:id="@+id/up_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:layout_margin="10dp"
                android:autofillHints="@null"/>

            <Button
                android:id="@+id/up_save"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save"/>

        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/up_ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/up_profileImage"
        android:layout_alignBottom="@id/up_profileImage"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"/>

</RelativeLayout>